--- a/src/components/sketch/SketchCode.module.css
+++ b/src/components/sketch/SketchCode.module.css
@@ -84,6 +84,7 @@
 .interactive {
   background-color: white;
   padding: 0 3px;
+  margin: 0 -3px;
   border-radius: 5px;
   transition: background-color 0.2s;
 }
